@@ -1,3 +1,6 @@
+04/24/2009
+- added new {template} tag
+
 04/23/2009
 - fixed access of special smarty variables from included template
 
